--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "globals": "^16.5.0"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0"
